# sourcing

apps/obsidian/: .gitignore  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css
apps/obsidian/src/: main.ts  sourcing.ts
apps/rest/: .gitignore  docker-compose.yml  pyproject.toml
apps/rest/sourcing/: celery.py  config.py  db.py  main.py  typing.py
apps/rest/sourcing/enable_banking/: client.py
apps/rest/sourcing/security/: crypto.py  db.py  models.py  router.py  token_factory.py
apps/rest/sourcing/source/: models.py  router.py
apps/rest/sourcing/source/aspsp/: db.py  enable_banking.py  models.py  router.py
apps/rest/sourcing/source/aspsp/scripts/: get_available_aspsp.py
apps/rest/sourcing/source/aspsp/tasks/: get_account_balances.py  get_available_aspsp.py
apps/rest/sourcing/source/crypto_wallet/: blockchain.py  db.py  models.py  router.py
apps/rest/sourcing/source/crypto_wallet/tasks/: get_available_coins.py  get_wallet_balances.py
apps/rest/sourcing/user/: auth.py  db.py  models.py  router.py
